--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -12,9 +12,9 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@standard{ISO9796-1,
+@misc{ISO9796-1,
   title        = "{ISO/IEC 9796: Information Technology — Security Techniques — Digital Signature Scheme Giving Message Recovery, Part 1: Mechanisms Using Redundancy}",
-  organization = "International Organization for Standardization",
+  author = "International Organization for Standardization",
   year         = 1999,
   note         = "Part 1 of the ISO/IEC 9796 standard",
 }
@@ -504,29 +504,6 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-
-@inproceedings{DBLP:conf/eurosp/BosDKLLSSSS18,
-  author       = {Joppe W. Bos and
-                  L{\'{e}}o Ducas and
-                  Eike Kiltz and
-                  Tancr{\`{e}}de Lepoint and
-                  Vadim Lyubashevsky and
-                  John M. Schanck and
-                  Peter Schwabe and
-                  Gregor Seiler and
-                  Damien Stehl{\'{e}}},
-  title        = {{CRYSTALS} - {K}yber: {A} {CCA}-Secure Module-Lattice-Based {KEM}},
-  booktitle    = {2018 {IEEE} European Symposium on Security and Privacy, EuroS{\&}P
-                  2018, London, United Kingdom, April 24-26, 2018},
-  pages        = {353--367},
-  publisher    = {{IEEE}},
-  year         = {2018},
-  url          = {https://doi.org/10.1109/EuroSP.2018.00032},
-  doi          = {10.1109/EUROSP.2018.00032},
-  timestamp    = {Wed, 16 Oct 2019 14:14:55 +0200},
-  biburl       = {https://dblp.org/rec/conf/eurosp/BosDKLLSSSS18.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
 
 
 @inproceedings{DBLP:conf/africacrypt/DAnversKRV18,
@@ -1636,3 +1613,301 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 % end of MAC attack references <<<<<<<<<<<<<<<<<<<<<
+
+
+
+
+@inproceedings{DBLP:conf/asiacrypt/JiangMZ23,
+  author       = {Haodong Jiang and
+                  Zhi Ma and
+                  Zhenfeng Zhang},
+  editor       = {Jian Guo and
+                  Ron Steinfeld},
+  title        = {Post-quantum Security of Key Encapsulation Mechanism Against {CCA}
+                  Attacks with a Single Decapsulation Query},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2023 - 29th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Guangzhou, China, December 4-8, 2023, Proceedings, Part {IV}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14441},
+  pages        = {434--468},
+  publisher    = {Springer},
+  year         = {2023},
+  url          = {https://doi.org/10.1007/978-981-99-8730-6\_14},
+  doi          = {10.1007/978-981-99-8730-6\_14},
+  timestamp    = {Sun, 07 Jan 2024 14:24:24 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/JiangMZ23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/asiacrypt/ZhouJZ24,
+  author       = {Biming Zhou and
+                  Haodong Jiang and
+                  Yunlei Zhao},
+  editor       = {Kai{-}Min Chung and
+                  Yu Sasaki},
+  title        = {{CPA}-Secure {KEM}s are also Sufficient for Post-quantum {TLS} 1.3},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2024 - 30th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Kolkata, India, December 9-13, 2024, Proceedings, Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {15486},
+  pages        = {433--464},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-981-96-0891-1\_14},
+  doi          = {10.1007/978-981-96-0891-1\_14},
+  timestamp    = {Fri, 03 Jan 2025 14:11:20 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/ZhouJZ24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@techreport{RFC8446,
+  author = {E. Rescorla},
+  title = {The Transport Layer Security (TLS) Protocol Version 1.3},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {8446},
+  year = {2018},
+  month = {August},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {RFC Editor},
+}
+
+
+
+@inproceedings{DBLP:conf/eurocrypt/Huguenin-Dumittan22,
+  author       = {Lo{\"{\i}}s Huguenin{-}Dumittan and
+                  Serge Vaudenay},
+  editor       = {Orr Dunkelman and
+                  Stefan Dziembowski},
+  title        = {On {IND-qCCA} Security in the {ROM} and Its Applications - {CPA} Security
+                  Is Sufficient for {TLS} 1.3},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2022 - 41st Annual International
+                  Conference on the Theory and Applications of Cryptographic Techniques,
+                  Trondheim, Norway, May 30 - June 3, 2022, Proceedings, Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13277},
+  pages        = {613--642},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-07082-2\_22},
+  doi          = {10.1007/978-3-031-07082-2\_22},
+  timestamp    = {Tue, 31 May 2022 17:23:11 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/Huguenin-Dumittan22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/ccs/SchwabeSW20,
+  author       = {Peter Schwabe and
+                  Douglas Stebila and
+                  Thom Wiggers},
+  editor       = {Jay Ligatti and
+                  Xinming Ou and
+                  Jonathan Katz and
+                  Giovanni Vigna},
+  title        = {Post-Quantum {TLS} Without Handshake Signatures},
+  booktitle    = {{CCS} '20: 2020 {ACM} {SIGSAC} Conference on Computer and Communications
+                  Security, Virtual Event, USA, November 9-13, 2020},
+  pages        = {1461--1480},
+  publisher    = {{ACM}},
+  year         = {2020},
+  url          = {https://doi.org/10.1145/3372297.3423350},
+  doi          = {10.1145/3372297.3423350},
+  timestamp    = {Sun, 19 Jan 2025 13:26:41 +0100},
+  biburl       = {https://dblp.org/rec/conf/ccs/SchwabeSW20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/ccs/DowlingFGS15,
+  author       = {Benjamin Dowling and
+                  Marc Fischlin and
+                  Felix G{\"{u}}nther and
+                  Douglas Stebila},
+  editor       = {Indrajit Ray and
+                  Ninghui Li and
+                  Christopher Kruegel},
+  title        = {A Cryptographic Analysis of the {TLS} 1.3 Handshake Protocol Candidates},
+  booktitle    = {Proceedings of the 22nd {ACM} {SIGSAC} Conference on Computer and
+                  Communications Security, Denver, CO, USA, October 12-16, 2015},
+  pages        = {1197--1210},
+  publisher    = {{ACM}},
+  year         = {2015},
+  url          = {https://doi.org/10.1145/2810103.2813653},
+  doi          = {10.1145/2810103.2813653},
+  timestamp    = {Tue, 07 May 2024 20:04:54 +0200},
+  biburl       = {https://dblp.org/rec/conf/ccs/DowlingFGS15.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/eurosp/BosDKLLSSSS18,
+  author       = {Joppe W. Bos and
+                  L{\'{e}}o Ducas and
+                  Eike Kiltz and
+                  Tancr{\`{e}}de Lepoint and
+                  Vadim Lyubashevsky and
+                  John M. Schanck and
+                  Peter Schwabe and
+                  Gregor Seiler and
+                  Damien Stehl{\'{e}}},
+  title        = {{CRYSTALS} - {K}yber: {A} {CCA}-Secure Module-Lattice-Based {KEM}},
+  booktitle    = {2018 {IEEE} European Symposium on Security and Privacy, EuroS{\&}P
+                  2018, London, United Kingdom, April 24-26, 2018},
+  pages        = {353--367},
+  publisher    = {{IEEE}},
+  year         = {2018},
+  url          = {https://doi.org/10.1109/EuroSP.2018.00032},
+  doi          = {10.1109/EUROSP.2018.00032},
+  timestamp    = {Wed, 16 Oct 2019 14:14:55 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurosp/BosDKLLSSSS18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/stoc/BellareCK98,
+  author       = {Mihir Bellare and
+                  Ran Canetti and
+                  Hugo Krawczyk},
+  editor       = {Jeffrey Scott Vitter},
+  title        = {A Modular Approach to the Design and Analysis of Authentication and
+                  Key Exchange Protocols (Extended Abstract)},
+  booktitle    = {Proceedings of the Thirtieth Annual {ACM} Symposium on the Theory
+                  of Computing, Dallas, Texas, USA, May 23-26, 1998},
+  pages        = {419--428},
+  publisher    = {{ACM}},
+  year         = {1998},
+  url          = {https://doi.org/10.1145/276698.276854},
+  doi          = {10.1145/276698.276854},
+  timestamp    = {Tue, 06 Nov 2018 11:07:06 +0100},
+  biburl       = {https://dblp.org/rec/conf/stoc/BellareCK98.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/eurocrypt/CanettiK01,
+  author       = {Ran Canetti and
+                  Hugo Krawczyk},
+  editor       = {Birgit Pfitzmann},
+  title        = {Analysis of Key-Exchange Protocols and Their Use for Building Secure
+                  Channels},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2001, International Conference
+                  on the Theory and Application of Cryptographic Techniques, Innsbruck,
+                  Austria, May 6-10, 2001, Proceeding},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2045},
+  pages        = {453--474},
+  publisher    = {Springer},
+  year         = {2001},
+  url          = {https://doi.org/10.1007/3-540-44987-6\_28},
+  doi          = {10.1007/3-540-44987-6\_28},
+  timestamp    = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/CanettiK01.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/stoc/Regev05,
+  author       = {Oded Regev},
+  editor       = {Harold N. Gabow and
+                  Ronald Fagin},
+  title        = {On lattices, learning with errors, random linear codes, and cryptography},
+  booktitle    = {Proceedings of the 37th Annual {ACM} Symposium on Theory of Computing,
+                  Baltimore, MD, USA, May 22-24, 2005},
+  pages        = {84--93},
+  publisher    = {{ACM}},
+  year         = {2005},
+  url          = {https://doi.org/10.1145/1060590.1060603},
+  doi          = {10.1145/1060590.1060603},
+  timestamp    = {Wed, 14 Nov 2018 10:51:37 +0100},
+  biburl       = {https://dblp.org/rec/conf/stoc/Regev05.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/eurocrypt/LyubashevskyPR10,
+  author       = {Vadim Lyubashevsky and
+                  Chris Peikert and
+                  Oded Regev},
+  editor       = {Henri Gilbert},
+  title        = {On Ideal Lattices and Learning with Errors over Rings},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2010, 29th Annual International
+                  Conference on the Theory and Applications of Cryptographic Techniques,
+                  Monaco / French Riviera, May 30 - June 3, 2010. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {6110},
+  pages        = {1--23},
+  publisher    = {Springer},
+  year         = {2010},
+  url          = {https://doi.org/10.1007/978-3-642-13190-5\_1},
+  doi          = {10.1007/978-3-642-13190-5\_1},
+  timestamp    = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/LyubashevskyPR10.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jacm/Regev09,
+  author       = {Oded Regev},
+  title        = {On lattices, learning with errors, random linear codes, and cryptography},
+  journal      = {J. {ACM}},
+  volume       = {56},
+  number       = {6},
+  pages        = {34:1--34:40},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1568318.1568324},
+  doi          = {10.1145/1568318.1568324},
+  timestamp    = {Fri, 24 Mar 2023 16:31:07 +0100},
+  biburl       = {https://dblp.org/rec/journals/jacm/Regev09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/stoc/Peikert09,
+  author       = {Chris Peikert},
+  editor       = {Michael Mitzenmacher},
+  title        = {Public-key cryptosystems from the worst-case shortest vector problem:
+                  extended abstract},
+  booktitle    = {Proceedings of the 41st Annual {ACM} Symposium on Theory of Computing,
+                  {STOC} 2009, Bethesda, MD, USA, May 31 - June 2, 2009},
+  pages        = {333--342},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1536414.1536461},
+  doi          = {10.1145/1536414.1536461},
+  timestamp    = {Wed, 14 Nov 2018 10:51:37 +0100},
+  biburl       = {https://dblp.org/rec/conf/stoc/Peikert09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/CramerHHIKPSV07,
+  author       = {Ronald Cramer and
+                  Goichiro Hanaoka and
+                  Dennis Hofheinz and
+                  Hideki Imai and
+                  Eike Kiltz and
+                  Rafael Pass and
+                  Abhi Shelat and
+                  Vinod Vaikuntanathan},
+  editor       = {Kaoru Kurosawa},
+  title        = {Bounded {CCA2}-Secure Encryption},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2007, 13th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Kuching, Malaysia, December 2-6, 2007, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {4833},
+  pages        = {502--518},
+  publisher    = {Springer},
+  year         = {2007},
+  url          = {https://doi.org/10.1007/978-3-540-76900-2\_31},
+  doi          = {10.1007/978-3-540-76900-2\_31},
+  timestamp    = {Mon, 26 Jun 2023 20:47:19 +0200},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/CramerHHIKPSV07.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
