--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -1,8 +1,14 @@
+% >>>>>>> Feb 12, 2025
+% eprint 2021/844 is a highly similar result to this paper, so we are no longer submitting to CRYPTO 2025. Perhaps in future works we can benchmark performance of TLS handshake using IND-1CCA secure KEM instead of IND-CCA secure KEM
+
 % >>>>>>> Feb 11, 2025
-% TODO: major re-write:
-%   - [ ] Remove the Classic McEliece section
-%   - [ ] Remove the ElGamal section, instead we will mention DHIES in Section 1.2
-%   - [ ] Re-instate ML-KEM and present encapsulation/decapsulation numbers; also include key exchange RTT in Appendix
+% DONE: need summary table in contribution
+% DONE: mention McEliece might be OW-PCA, but performance improvements are minor
+% DONE: reference the network RTT appendix in the main body
+% DONE: major re-write:
+%   - [x] Remove the Classic McEliece section
+%   - [x] Remove the ElGamal section, instead we will mention DHIES in Section 1.2
+%   - [x] Re-instate ML-KEM and present encapsulation/decapsulation numbers; also include key exchange RTT in Appendix
 
 % >>>>>> Feb 10, 2025
 % DONE: fully state the name of OW-PCA in abstract
@@ -88,7 +94,7 @@
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-    \texttt{ML-KEM} is a lattice-based IND-CCA secure key encapsulation mechanism (KEM) standardized by NIST in FIPS 203. \texttt{ML-KEM} achieves chosen-ciphertext security by applying the Fujisaki-Okamoto (FO) transformation to an IND-CPA secure public key encryption (PKE) scheme. The Fujisaki-Okamoto transformation uses de-randomization and re-encryption to ensure ciphertext non-malleability, but because \texttt{ML-KEM}'s underlying PKE encryption subroutine is slower than the decryption subroutine, \texttt{ML-KEM}'s decapsulation performance is dominated by re-encryption. In this paper, we propose a new generic IND-CCA secure KEM transformation that achieves chosen-ciphertext security by applying the ``encrypt-then-authenticate'' pattern to a PKE with one-wayness under plaintext-checking attack (OW-PCA) and an existentially unforgeable message authentication code (MAC). Compared to the FO transformation, our transformation replaces re-encryption with computing a MAC tag. We present \texttt{ML-KEM-EtM}, an IND-1CCA secure KEM derived from applying the encrypt-then-MAC transformation to the PKE subroutines of \texttt{ML-KEM}. We then implement \texttt{ML-KEM-EtM} with a wide selection of MACs including \texttt{Poly1305}, \texttt{\texttt{GMAC}}, \texttt{\texttt{CMAC}}, and \texttt{\texttt{KMAC256}}. At the cost of minimal increase in encapsulation CPU cycle count and ciphertext size, \texttt{ML-KEM-EtM} achieves substantial reduction of decapsulation CPU cycle count.
+    \texttt{ML-KEM} is a lattice-based IND-CCA secure key encapsulation mechanism (KEM) standardized by NIST in FIPS 203. \texttt{ML-KEM} achieves chosen-ciphertext security by applying the Fujisaki-Okamoto (FO) transformation to an IND-CPA secure public key encryption (PKE) scheme. The Fujisaki-Okamoto transformation uses de-randomization and re-encryption to ensure ciphertext non-malleability, but because \texttt{ML-KEM}'s underlying PKE encryption subroutine is slower than the decryption subroutine, \texttt{ML-KEM}'s decapsulation performance is dominated by re-encryption. In this paper, we propose a new generic IND-CCA secure KEM transformation that achieves chosen-ciphertext security by applying the ``encrypt-then-authenticate'' pattern to a PKE with one-wayness under plaintext-checking attack (OW-PCA) and an existentially unforgeable message authentication code (MAC). Compared to the FO transformation, our transformation replaces re-encryption with computing a MAC tag. We present \texttt{ML-KEM-EtM}, an IND-1CCA secure KEM derived from applying the encrypt-then-MAC transformation to the PKE subroutines of \texttt{ML-KEM}. We then implement \texttt{ML-KEM-EtM} with a wide selection of MACs including \texttt{Poly1305}, \texttt{\texttt{GMAC}}, \texttt{\texttt{CMAC}}, and \texttt{\texttt{KMAC256}}. At the cost of minimal increase in encapsulation CPU cycle count and ciphertext size, \texttt{ML-KEM-EtM} achieves a substantial reduction of decapsulation CPU cycle count.
     \keywords{
         Key encapsulation mechanism
         \and Post-quantum cryptography
@@ -99,16 +105,50 @@
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}
-Key encapsulation mechanism (KEM) is a public-key cryptographic primitive that allows two parties to establish a shared secret over an insecure communication channel. The accepted security requirement of a KEM is \textit{indistinguishability under adaptive chosen ciphertext attack (IND-CCA)}. Intuitively speaking, IND-CCA security implies that no efficient adversary (usually defined as probabilistic polynomial time Turing machine) can distinguish a pseudorandom shared secret from a uniformly random bit string of identical length even with access to a decapsulation oracle. Unfortunately, CCA security is difficult to achieve from scratch. Early attempts at constructing CCA secure public-key cryptosystems using only heuristics argument and without using formal proof, such as RSA encryption in PKCS \#1 \cite{DBLP:journals/rfc/rfc2313} and RSA signature in ISO 9796 \cite{ISO9796-1}, were badly broken with sophisticated cryptanalysis \cite{DBLP:conf/crypto/Bleichenbacher98,DBLP:conf/eurocrypt/Grieu00,DBLP:conf/crypto/CoronNS99}. Afterwards, provable chosen ciphertext security became a necessity for new cryptographic protocols. There have been many provable CCA secure constructions since then. Notable examples include Optimal Asymmetric Encryption Padding (OAEP) \cite{DBLP:conf/eurocrypt/BellareR94}, which is combined with RSA \cite{DBLP:conf/crypto/FujisakiOPS01} into the widely adopted RSA-OAEP. The Fujisaki-Okamoto transformation \cite{DBLP:conf/crypto/FujisakiO99,DBLP:conf/tcc/HofheinzHK17} is another generic CCA secure transformation that was thoroughly studied and widely adopted, particularly by many KEM candidates in NIST's Post Quantum Cryptography (PQC) standardization project.
+Key encapsulation mechanism (KEM) is a public-key cryptographic primitive that allows two parties to establish a shared secret over an insecure communication channel. The accepted security requirement of a KEM is \textit{indistinguishability under adaptive chosen ciphertext attack (IND-CCA)}. Intuitively speaking, IND-CCA security implies that no efficient adversary (usually defined as probabilistic polynomial time Turing machine) can distinguish a pseudorandom shared secret from a uniformly random bit string of identical length even with access to a decapsulation oracle. On the other hand, IND-1CCA is a restricted form of IND-CCA security where an adversary can make only one query to the decapsulation oracle. Unfortunately, CCA security is difficult to achieve from scratch. Early attempts at constructing CCA secure public-key cryptosystems using only heuristics argument and without using formal proof, such as RSA encryption in PKCS \#1 \cite{DBLP:journals/rfc/rfc2313} and RSA signature in ISO 9796 \cite{ISO9796-1}, were badly broken with sophisticated cryptanalysis \cite{DBLP:conf/crypto/Bleichenbacher98,DBLP:conf/eurocrypt/Grieu00,DBLP:conf/crypto/CoronNS99}. Afterwards, provable chosen ciphertext security became a necessity for new cryptographic protocols. There have been many provable CCA secure constructions since then. Notable examples include Optimal Asymmetric Encryption Padding (OAEP) \cite{DBLP:conf/eurocrypt/BellareR94}, which is combined with RSA \cite{DBLP:conf/crypto/FujisakiOPS01} into the widely adopted RSA-OAEP. The Fujisaki-Okamoto transformation \cite{DBLP:conf/crypto/FujisakiO99,DBLP:conf/tcc/HofheinzHK17} is another generic CCA secure transformation that was thoroughly studied and widely adopted, particularly by many KEM candidates in NIST's Post Quantum Cryptography (PQC) standardization project.
 
-Chosen ciphertext security is a solved problem within the context of symmetric cryptography. It is well understood that authenticated encryption can be achieved by combining a semantically secure symmetric encryption scheme with an existentially unforgeable message authentication code (MAC) using either the ``encrypt-then-MAC'' (AES-GCM, ChaCha20-\texttt{Poly1305}) or ``MAC-then-encrypt'' pattern (AES-CCM)\cite{DBLP:conf/asiacrypt/BellareN00,DBLP:conf/crypto/Krawczyk01}. However, adapting this technique for public-key cryptosystems is challenging, since the two communicating parties do not have a pre-shared symmetric key. One attempt at such adaption is the Diffie-Hellman integrated encryption scheme (DHIES) \cite{DBLP:journals/iacr/AbdallaBR99,DBLP:conf/ctrsa/AbdallaBR01} proposed by Abdalla, Bellare, and Rogaway, who proved its chosen ciphertext security under a non-standard but well studied assumption called ``Gap Diffie-Hellman problem'' \cite{DBLP:conf/pkc/OkamotoP01}.
+Chosen ciphertext security is a solved problem within the context of symmetric cryptography. It is well understood that authenticated encryption can be achieved by combining a semantically secure symmetric encryption scheme with an existentially unforgeable message authentication code (MAC) using either the ``encrypt-then-MAC'' (AES-GCM, ChaCha20-Poly1305) or ``MAC-then-encrypt'' pattern (AES-CCM)\cite{DBLP:conf/asiacrypt/BellareN00,DBLP:conf/crypto/Krawczyk01}. However, adapting this technique for public-key cryptosystems is challenging, since the two communicating parties do not have a pre-shared symmetric key. One attempt at such adaption is the Diffie-Hellman integrated encryption scheme (DHIES) \cite{DBLP:journals/iacr/AbdallaBR99,DBLP:conf/ctrsa/AbdallaBR01} proposed by Abdalla, Bellare, and Rogaway, who proved its chosen ciphertext security under a non-standard but well studied assumption called ``Gap Diffie-Hellman problem'' \cite{DBLP:conf/pkc/OkamotoP01}.
 
 \subsection{Our contributions}\label{sec:our-contributions}
 Our contributions are as follows:
 
 \subsubsection{New generic CCA secure KEM transformation.} We propose the encrypt-then-MAC KEM transformation. Our transformation constructs a KEM with provable CCA security under the random oracle model using a public-key encryption scheme (PKE) with one-wayness under plaintext-checking attack and a message authentication code with existential unforgeability. Compared to the Fujisaki-Okamoto transformation, which is widely adopted by many KEM candidates in NIST's Post Quantum Cryptography (PQC) standardization project, our transformation replaces \textit{de-randomization} and \textit{re-encryption} with computing and comparing a MAC tag. We formally prove the security of our KEM transformation.
 
-\subsubsection{Instantiation with \texttt{ML-KEM}.} We present \texttt{ML-KEM-EtM}, an IND-1CCA secure KEM derived from applying the encrypt-then-MAC transformation to \texttt{ML-KEM}'s PKE subroutines. Compared to \texttt{ML-KEM} in FIPS 203 \cite{FIPS203}, \texttt{ML-KEM-EtM} adds a small amount of performance penalty to the encapsulation routine and a small increase in ciphertext size, but removes the expensive re-encryption step in decapsulation, which yields impressive performance improvements.
+\subsubsection{Instantiation with \texttt{ML-KEM}.} We present \texttt{ML-KEM-EtM}, an IND-1CCA secure KEM derived from applying the encrypt-then-MAC transformation to \texttt{ML-KEM}'s PKE subroutines. Compared to \texttt{ML-KEM} in FIPS 203 \cite{FIPS203}, \texttt{ML-KEM-EtM} adds a small amount of performance penalty to the encapsulation routine and a small increase in ciphertext size, but removes the expensive re-encryption step in decapsulation, which yields impressive performance improvements (Table \ref{tbl:cpu-cycles-summary}).
+
+\begin{table}[h]
+    \centering
+    \footnotesize
+
+    \begin{tabular}{|p{5em}|p{8em}|p{8em}|p{8em}|}
+        \hline
+        & \texttt{ML-KEM-EtM-512} \newline + \texttt{Poly1305}
+        & \texttt{ML-KEM-EtM-768} \newline + \texttt{Poly1305}
+        & \texttt{ML-KEM-EtM-1024} \newline + \texttt{Poly1305}
+        \\
+        \hline
+        Encap \newline (ccl/tick) 
+        & 93,157 \newline (+1.8\%) 
+        & 146,405 \newline (+7.3\%) 
+        & 205,763 \newline (+3.3\%) 
+        \\
+        \hline
+        Decap \newline (ccl/tick) 
+        & 33,733 \newline (-72.2\%) 
+        & 43,315 \newline (-76.8\%) 
+        & 51,375 \newline (-79.1\%) 
+        \\
+        \hline
+        CT size \newline (bytes) 
+        & 784 \newline (+2.1\%) 
+        & 1104 \newline (+1.4\%) 
+        & 1584 \newline (+1.0\%) 
+        \\
+        \hline
+    \end{tabular}\vspace{0.8em}
+
+    \caption{\texttt{ML-KEM-EtM} achieves impressive reduction of decapsulation CPU cycles count compared to \texttt{ML-KEM} while incurring minimal penalty in encapsulation performance and ciphertext size.}\label{tbl:cpu-cycles-summary}
+\end{table}
 
 % \subsubsection{Generalizing DHIES.} We demonstrate that the encrypt-then-MAC KEM transformation is a generalization of DHIES \cite{DBLP:conf/ctrsa/AbdallaBR01,DBLP:journals/iacr/AbdallaBR99}, a well-known CCA secure hybrid public-key encryption scheme. Specifically, we prove that the Gap Diffie-Hellman assumption, which is used to prove the CCA security of DHIES, implies one-wayness under plaintext checking attack (OW-PCA) of the ElGamal cryptosystem.
 
@@ -676,7 +716,7 @@ The ElGamal cryptosystem \cite{DBLP:journals/tit/Elgamal85} is OW-PCA secure if 
 
 NTRU is another family of lattice-based cryptosystems. Hoffstein and Silverman \cite{hoffstein1999reaction} proposed KR-PCA for the original NTRU cryptosystem, which Ueno et al. \cite{DBLP:journals/tches/UenoXTITH22} adapted into a KR-PCA against modern instantiations such as NTRU-HPS and NTRU-HRSS (also see \cite{cryptoeprint:2021/168}). Ueno et al. also adapted \cite{DBLP:conf/crypto/JaulmesJ00} into a KR-PCA against NTRU-Prime.
 
-\paragraph{Code-based cryptosystems} HQC \cite{hamming-quasi-cyclic-4th-round-submission}, despite being based on hard coding problems, is structurally similar to lattice-based cryptosystems Kyber, Saber, etc. \cite{DBLP:journals/tches/UenoXTITH22}. Consequently, KR-PCA for lattice cryptosystems can be easily adapted to work on HQC \cite{DBLP:conf/acns/Huguenin-Dumittan20,DBLP:conf/eurocrypt/BaetuDHTV19}. BIKE \cite{bike-4th-round-submission} is based on the Niederreiter cryptosystem instantiated with quasi-cyclic moderate density parity check (QC-MDPC) code \cite{DBLP:conf/isit/MisoczkiTSB13}. \cite{DBLP:conf/asiacrypt/Guo0S16} described KR-PCA against QC-MDPC code, which can partially recover BIKE secret keys \cite{DBLP:conf/asiacrypt/XagawaIUTH21}. There is no known adaptive attack against Classic McEliece  \cite{DBLP:journals/tches/UenoXTITH22}.
+\paragraph{Code-based cryptosystems} HQC \cite{hamming-quasi-cyclic-4th-round-submission}, despite being based on hard coding problems, is structurally similar to lattice-based cryptosystems Kyber, Saber, etc. \cite{DBLP:journals/tches/UenoXTITH22}. Consequently, KR-PCA for lattice cryptosystems can be easily adapted to work on HQC \cite{DBLP:conf/acns/Huguenin-Dumittan20,DBLP:conf/eurocrypt/BaetuDHTV19}. BIKE \cite{bike-4th-round-submission} is based on the Niederreiter cryptosystem instantiated with quasi-cyclic moderate density parity check (QC-MDPC) code \cite{DBLP:conf/isit/MisoczkiTSB13}. \cite{DBLP:conf/asiacrypt/Guo0S16} described KR-PCA against QC-MDPC code, which can partially recover BIKE secret keys \cite{DBLP:conf/asiacrypt/XagawaIUTH21}. There is no known adaptive attack against Classic McEliece  \cite{DBLP:journals/tches/UenoXTITH22}, although the decoding subroutine of Classic McEliece is significantly slower than the encoding subroutine, so applying the encrypt-then-MAC transformation will not yield meaningful performance improvements.
 
 \subsection{Additional implementation notes}\label{sec:additional-implementation-notes}
 \paragraph{Securely deriving MAC key} Because the MAC key is pseudorandomly derived from the PKE plaintext (instead of uniformly and independently sampled), it is possible to construct a large lookup table mapping each PKE plaintext to a MAC key, then check the KEM ciphertext $(c, t)$ against each MAC key to recover the pre-image. As was pointed out in \cite{DBLP:journals/iacr/Bernstein21,cryptoeprint:2021/912}, this relationship between the MAC tag and the PKE plaintext could damage the security of the scheme. This can be mitigated by including the PKE public key when deriving the MAC key $k_\mac \leftarrow G(\pk, m)$ or even including random salt at each encapsulation $k_\mac \leftarrow G(\pk, m, \text{salt})$, which can increase the cost of such dictionary attacks.
@@ -1146,7 +1186,6 @@ For a concrete instantiation of \texttt{ML-KEM-EtM}, we chose four MACs covering
 \begin{table}[h]
     \centering
     \footnotesize
-    \caption{CPU cycles of each KEM routine}\label{tbl:kem-performance}
 
     % \begin{tabular}[t]{|cc|}
     %     \hline
@@ -1251,15 +1290,16 @@ For a concrete instantiation of \texttt{ML-KEM-EtM}, we chose four MACs covering
         \hline
         \texttt{ML-KEM-EtM-1024} + \texttt{KMAC256} & 216,761 & 217,468 & 62,269 & 62,516 \\
         \hline
-    \end{tabular}
+    \end{tabular}\vspace{0.8em}
+    
+    \caption{CPU cycles of each KEM routine}\label{tbl:kem-performance}
 \end{table}
 
 
 \subsection{Experimental results}
-Our implementation of \texttt{ML-KEM-EtM} in extended from \texttt{Kyber}'s reference implementation \footnote{\url{https://github.com/pq-crystals/kyber}}. Source code is compiled with \texttt{GCC 11.4.1} and \texttt{OpenSSL 3.0.8}. All binaries are executed on an AWS c7a.medium instance (AMD EPYC 9R14 CPU at 3.7 GHz and 1 GB of RAM) in the \texttt{us-west-2} region. We measured the CPU cycles count of the encapsulation/decapsulation routines of \texttt{ML-KEM-EtM} using the \texttt{RDTSC} instruction. 
+Our implementation of \texttt{ML-KEM-EtM} extended from \texttt{Kyber}'s reference implementation \footnote{\url{https://github.com/pq-crystals/kyber}}. Source code is compiled with \texttt{GCC 11.4.1} and \texttt{OpenSSL 3.0.8}. All binaries are executed on an AWS c7a.medium instance (AMD EPYC 9R14 CPU at 3.7 GHz and 1 GB of RAM) in the \texttt{us-west-2} region. We measured the CPU cycles count of the encapsulation/decapsulation routines of \texttt{ML-KEM-EtM} using the \texttt{RDTSC} instruction. 
 
-Compared to the FO transformation used in \texttt{ML-KEM}, the encrypt-then-MAC transformation achieves a massive CPU cycle count reduction in decapsulation while incurring only a minimal increase of encapsulation cycle count and ciphertext size. Since \texttt{K-PKE.\encrypt} carries significantly more computational complexity than \texttt{K-PKE.\decrypt} or any MAC we chose, the performance advantage of the encrypt-then-MAC transformation over the Fujisaki-Okamoto transformation is dominated by the runtime saving gained from replacing \emph{re-encryption} with MAC. A timing comparison between the \texttt{ML-KEM} and the variations of the \texttt{ML-KEM-EtM} is provided in Table \ref{tbl:kem-performance}.
-
+Compared to the FO transformation used in \texttt{ML-KEM}, the encrypt-then-MAC transformation achieves a massive CPU cycle count reduction in decapsulation while incurring only a minimal increase of encapsulation cycle count and ciphertext size. Since \texttt{K-PKE.\encrypt} carries significantly more computational complexity than \texttt{K-PKE.\decrypt} or any MAC we chose, the performance advantage of the encrypt-then-MAC transformation over the Fujisaki-Okamoto transformation is dominated by the runtime saving gained from replacing \emph{re-encryption} with MAC. A timing comparison between the \texttt{ML-KEM} and the variations of the \texttt{ML-KEM-EtM} is provided in Table \ref{tbl:kem-performance}. Because the CPU cycle count reduction in decapsulation is significantly more than the overhead in encapsulation and the increase in ciphertext size, \texttt{ML-KEM-EtM} can be used to implement efficient ephemeral key exchange. Compared to key exchange using \texttt{ML-KEM}, \texttt{ML-KEM-EtM} key exchange saves on average 29\%-48\% network round trip time (see Appendix \ref{sec:key-exchange-protocols}).
 
 \section{Concluding remarks}\label{sec:conclusion}
 In this paper we presented ``encrypt-then-MAC'', a KEM constructed from a PKE and a MAC. We reduced the IND-CCA security of the KEM tightly to the OW-PCA security of the underlying PKE and non-tightly to the security of the underlying MAC. We also analyzed generic attacks on the KEM and proposed countermeasures. We then proposed \texttt{ML-KEM-EtM}, an IND-1CCA secure KEM derived from applying the encrypt-then-MAC transformation to the PKE subroutines of \texttt{ML-KEM}. Compared to \texttt{ML-KEM}, \texttt{ML-KEM-EtM} replaces the expensive re-encryption with computing a MAC tag. At the cost of minimal increase in encapsulation cost and ciphertext size, \texttt{ML-KEM-EtM} achieves substantially faster decapsulation, which makes it a great candidate for constructing efficient post-quantum key exchange protocols.
